--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,2 @@
-absl-py==0.5.0
-aiofiles==0.4.0
-appnope==0.1.0
-astor==0.7.1
-backcall==0.1.0
-beautifulsoup4==4.6.3
-bs4==0.0.1
-certifi==2018.11.29
-chardet==3.0.4
-cycler==0.10.0
-decorator==4.3.0
-feedparser==5.2.1
-fix-yahoo-finance==0.0.22
-gast==0.2.0
-grpcio==1.15.0
-h5py==2.8.0
-idna==2.7
-ipykernel==5.1.0
-ipython==7.2.0
-ipython-genutils==0.2.0
-jedi==0.13.2
-jupyter-client==5.2.4
-jupyter-core==4.4.0
-Keras==2.2.4
-Keras-Applications==1.0.6
-Keras-Preprocessing==1.0.5
-kiwisolver==1.0.1
-logzero==1.5.0
-lxml==4.2.5
-Markdown==3.0.1
-matplotlib==3.0.2
-multitasking==0.0.7
-nltk==3.4
-numpy==1.15.2
-pandas==0.23.4
-pandas-datareader==0.7.0
-parso==0.3.1
-pexpect==4.6.0
-pickleshare==0.7.5
-pipenv==11.10.4
-prompt-toolkit==2.0.7
-protobuf==3.6.1
-ptyprocess==0.6.0
-Pygments==2.3.1
-pyparsing==2.2.2
-python-dateutil==2.7.3
-pytz==2018.5
-PyYAML~>4.2b1
-pyzmq==17.1.2
-requests==2.20.0
-scikit-learn==0.20.0
-scipy==1.1.0
-seaborn==0.9.0
-singledispatch==3.4.0.3
-six==1.11.0
-sklearn==0.0
-tensorboard==1.12.1
-tensorflow
-termcolor==1.1.0
-tornado==5.1.1
-traitlets==4.3.2
-urllib3==1.24
-virtualenv==16.1.0
-virtualenv-clone==0.3.0
-wcwidth==0.1.7
-Werkzeug==0.14.1
-wrapt==1.10.11
+logzero
+streamlit
